2008-04-11  Kouhei Sutou  <kou@cozmixng.org>

	* samples/png.rb: use convenience notation.

	* samples/pac.rb, samples/pac2.rb: use Cairo::Paper.

	* src/rb_cairo_surface.c: don't change paper's unit.

	* src/lib/cairo/papers.rb: add landscape papers.

	* test/test_paper.rb, src/lib/cairo/paper.rb: support name parsing.

	* src/lib/cairo/paper.rb: improve unit handling.

	* src/rb_cairo.c:
	- BINDINGS_VERSION: 1.5.2 -> 1.6.0.
	- support <= 1.6.0.

	* NEWS: update.

	* src/lib/cairo/papers.rb: fix unit.

	* src/cairo.def, src/rb_cairo.c, src/rb_cairo.h, src/lib/cairo.rb,
	src/rb_cairo_surface.c: Cairo::PSSurface.new,
	Cairo::PDFSurface.new, Cairo::SVGSurface.new,
	Cairo::PSSurface#set_size and Cairo::PDFSurface#set_size accept
	paper description that can be parsed by Cairo::Paper.parse as page
	size.

	* src/lib/cairo/paper.rb, test/test_paper.rb: use pt as default unit.

	* src/cairo.def, src/rb_cairo.h, src/rb_cairo_surface.c: add
	CRSURFACE2RVAL_WITH_DESTROY() and
	rb_cairo_surface_to_ruby_object_with_destroy().

	* src/rb_cairo_surface.c (cr_surface_create_similar): fix memory leak.

2008-04-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/paper.rb, test/test_paper.rb: improve parser.

	* src/lib/cairo/paper.rb, src/lib/cairo/papers.rb,
	test/test_paper.rb: add.

2008-04-04  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: cleanup libruby-cairo.a.

	* extconf.rb: support building with Wine + MinGW on my Linux
	environment.

	* extconf.rb: use search path for nmake.

	* extconf.rb: add the same directory of extconf.rb to load path.

	* extconf.rb: fix IMPLIB path.

	* src/rb_cairo_constants.c: define dummy
	rb_cairo_ps_level_from_ruby_object() just for creating cairo.lib.

	* extconf.rb: substitute DLLIB not TARGET.

	* pkg-config.rb: fix substitution for MSVC.

	* extconf.rb: support output option for MSVC.

	* src/rb_cairo_path.c: remove garbages.

	* extconf.rb: fix object file extension substitution.

	* pkg-config.rb: detect MSVC environment.
